--- a/.prettierrc
+++ b/.prettierrc
@@ -3,10 +3,11 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
+	"editor.formatOnSave": true,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
 		{
-			"files": "*.svelte",
+			"files": ["*.svelte","*.ts"],
 			"options": {
 				"parser": "svelte"
 			}
