--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.16.0",
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.314.0",
 		"tailwind-merge": "^2.2.0",
